--- a/.gitignore
+++ b/.gitignore
@@ -40,3 +40,11 @@ testem.log
 # System files
 .DS_Store
 Thumbs.db
+
+# Angular files to ignore
+node_modules/
+dist/
+tmp/
+out-tsc/
+coverage/
+package-lock.json
